--- a/resources/style.css
+++ b/resources/style.css
@@ -91,20 +91,68 @@ body {
     padding: 1em;    
 }
 
-.page-orders {
+.page-order-list {
     justify-content: center;
 }
 
+.page-order-list > div:nth-child(2n-1) {
+    flex: 1;
+}
+
+.page-order-list > div:nth-child(2n) {
+    flex: 2
+}
+
 .w-order-list-item {
-    border: 0.2em solid white;
+    /*border: 0.2em solid;*/
+    background-color: #333333;
     border-radius: 1em;
-    padding: 1em;
-    margin-bottom: 1em;
-    width: 50vw;
+    padding: 0.5em 2em;
+    margin-bottom: 1.5em;
     line-height: 2em;
 }
 
 .w-order-list-item > div:first-child {
     border-bottom: 0.1em solid;
-    margin-bottom: 0.5em;
+}
+
+.w-order-list-item > div:nth-child(n+2) {
+    margin-top: 0.5em;
+}
+
+.w-order-list-item .order-list-details-wrapper > div {
+    flex: 1;
+    /*border: 0.1em solid;*/
+    border-radius: 0.5em;
+    /*padding: 0.2em 1em 0em 1em;*/
+    background-color: #1D1C1D;
+}
+
+.w-order-list-item .order-list-details-wrapper > div > div:first-child {
+    color: #E500E5;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    cursor: pointer;
+}
+
+.w-order-list-item .order-list-details-wrapper > div > div:nth-child(n+2) {
+    border-top: 0.2em solid #333333;
+    padding: 0em 1em;
+}
+
+.w-order-list-item .order-list-details-wrapper > div > div:first-child::after {
+    content: "";
+    background-image: url("chevron.png");
+    background-size: 1em;
+    width: 1em;
+    height: 1em;
+    display: inline-block;
+    margin-left: 0.5em;
+    align-self: center;
+    transition: 0.2s ease-in-out;
+}
+
+.w-order-list-item .order-list-details-wrapper > div.expanded > div:first-child::after {
+    transform: rotate(-180deg);
 }
