Added message to order list when the list is empty. Navbar is now sticky. Bugfixes.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -54,6 +54,11 @@ body {
     flex: 1;
 }
 
+.sticky-top {
+    position: sticky;
+    top: 0px;
+}
+
 .navbar {
     justify-content: flex-start;
     align-items: stretch;
