MenuItem update + MenuPage style

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -51,6 +51,12 @@
     flex: 1;
 }
 
+.menu-description {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
 .sticky-top {
     position: sticky;
     top: 0px;
@@ -121,12 +127,13 @@ body {
     padding: 1em;
 }
 
-.list > div {
+.list>div {
     flex: 2;
     min-width: 40em;
 }
 
-.list::before, .list::after {
+.list::before,
+.list::after {
     content: "";
     flex: 1;
 }
@@ -141,7 +148,7 @@ body {
     line-height: 2em;
 }
 
-div.list-item-removed > .list-item {
+div.list-item-removed>.list-item {
     transform: translateX(20em);
     opacity: 0;
     transition: transform 0.5s, opacity 0.4s;
@@ -156,7 +163,7 @@ div.list-item-removed > .list-item {
     font-weight: bold;
 }
 
-.list-item > .list-item-header button {
+.list-item>.list-item-header button {
     all: unset;
     background-color: var(--colour-dark-gray);
     border-top: 0.1em solid;
@@ -168,18 +175,18 @@ div.list-item-removed > .list-item {
     cursor: pointer;
 }
 
-.list-item > .list-item-header button:hover {
+.list-item>.list-item-header button:hover {
     background-color: var(--colour-dark-blue);
 }
 
-.list-item > .list-item-header button img {
+.list-item>.list-item-header button img {
     display: inline-block;
     height: 1.2em;
     margin-right: 0.3em;
     vertical-align: middle;
 }
 
-.list-item > div:nth-child(n+2) {
+.list-item>div:nth-child(n+2) {
     margin-top: 0.5em;
 }
 
@@ -188,13 +195,13 @@ div.list-item-removed > .list-item {
     flex-direction: row;
 }
 
-.panel-wrapper > div {
+.panel-wrapper>div {
     flex: 1;
     border-radius: 0.5em;
     background-color: var(--colour-dark-gray);
 }
 
-.panel-wrapper > div > div:first-child {
+.panel-wrapper>div>div:first-child {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -202,12 +209,12 @@ div.list-item-removed > .list-item {
     cursor: pointer;
 }
 
-.panel-wrapper > div > div:nth-child(n+2) {
+.panel-wrapper>div>div:nth-child(n+2) {
     border-top: 0.2em solid var(--colour-light-gray);
     padding: 0em 1em;
 }
 
-.panel-wrapper > div > div:first-child::after {
+.panel-wrapper>div>div:first-child::after {
     content: "";
     background-image: url("../images/chevron.png");
     background-size: 1em;
@@ -219,9 +226,9 @@ div.list-item-removed > .list-item {
     transition: 0.2s ease-in-out;
 }
 
-.panel-wrapper > div.panel-expanded > div:first-child::after {
-    -webkit-transform: scale(1,-1);
-    transform: scale(1,-1);
+.panel-wrapper>div.panel-expanded>div:first-child::after {
+    -webkit-transform: scale(1, -1);
+    transform: scale(1, -1);
 }
 
 .table-order-details {
