--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -29,12 +29,10 @@
 
 .font-regular {
     font-family: var(--font-family-regular);
-    font-weight: normal;
 }
 
 .font-bold {
     font-family: var(--font-family-bold);
-    font-weight: bold;
 }
 
 .flex-row {
@@ -60,6 +58,7 @@
 .sticky-top {
     position: sticky;
     top: 0px;
+    z-index: 9000; /* Wt uses absurdly large z-indices on its widgets */
 }
 
 body {
@@ -67,8 +66,40 @@ body {
     background-color: var(--colour-dark-gray);
     color: white;
     font-family: var(--font-family-regular);
-    font-weight: normal;
     min-width: 54em;
+}
+
+.loading-indicator {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 9002;
+    width: 10em;
+    height: 10em;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: stretch;
+    border-radius: 1em;
+    padding: 1em;
+    background-color: var(--colour-light-gray);
+    font-family: var(--font-family-bold);
+    text-align: center;
+}
+
+.loading-indicator img {
+    width: 6em;
+}
+
+.loading-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 9001;
 }
 
 .navbar {
@@ -80,7 +111,6 @@ body {
     width: 100%;
     background-color: var(--colour-light-gray);
     font-family: var(--font-family-bold);
-    font-weight: bold;
 }
 
 .navbar-spacer {
@@ -167,7 +197,6 @@ div.list-item-removed > .list-item {
     justify-content: space-between;
     border-bottom: 0.1em solid;
     font-family: var(--font-family-bold);
-    font-weight: bold;
 }
 
 .list-item > .list-item-header button {
